[project]
name = "coiu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hdutfj", email = "156539429+Hdutfj@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
coiu = "coiu:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
